force-app/main/default/objects/ARF_Invoice__c/ARF_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoice records synced from ERP for Inqulo collections management</description>
    <label>AR Invoice</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>