force-app/main/default/objects/ARF_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent account for this invoice</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Invoices</relationshipLabel>
    <relationshipName>AR_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>