force-app/main/default/objects/ARF_Invoice__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <description>Bill to address</description>
    <label>Bill To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>