force-app/main/default/objects/ARF_Invoice__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Invoice currency code</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>