force-app/main/default/objects/ARF_Invoice__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>Invoice document number from ERP</description>
    <label>Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>