force-app/main/default/objects/ARF_Invoice__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <description>Unique identifier in source ERP</description>
    <label>ERP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>