force-app/main/default/objects/ARF_Invoice__c/fields/ERP_Source__c.field-meta.xml
<CustomField>
    <fullName>ERP_Source__c</fullName>
    <description>Source ERP system identifier</description>
    <label>ERP Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>