force-app/main/default/objects/ARF_Invoice__c/fields/Has_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Has_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether invoice has an open dispute</description>
    <label>Has Dispute</label>
    <type>Checkbox</type>
</CustomField>