force-app/main/default/objects/ARF_Invoice__c/fields/Has_Promise__c.field-meta.xml
<CustomField>
    <fullName>Has_Promise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether invoice has an open promise to pay</description>
    <label>Has Promise</label>
    <type>Checkbox</type>
</CustomField>