force-app/main/default/objects/ARF_Invoice__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether invoice is past due date</description>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>