force-app/main/default/objects/ARF_Invoice__c/fields/Promise_Status__c.field-meta.xml
<CustomField>
    <fullName>Promise_Status__c</fullName>
    <description>Status of the promise to pay associated with this invoice. Populated by rollup job.</description>
    <label>Promise Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>