force-app/main/default/objects/ARF_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current invoice status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
                <value><fullName>Partially Paid</fullName><default>false</default><label>Partially Paid</label></value>
                <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
                <value><fullName>In Dispute</fullName><default>false</default><label>In Dispute</label></value>
                <value><fullName>Written Off</fullName><default>false</default><label>Written Off</label></value>
                <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>